name:                wiraraja
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wiraraja#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall -O2
  exposed-modules:
      Network.Wiraraja.Routing
  build-depends:
      base                    >= 4        && < 5
    , bytestring              >= 0.9.1.4
    , containers
    , http-types              >= 0.7
    , text
    , wai                     == 3.*
    , warp                    == 3.*
  default-language:    Haskell2010

executable wiraraja
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                    >= 4        && < 5
  default-language:    Haskell2010

test-suite wiraraja-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wiraraja
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wiraraja
